--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=easy-notes
-sonar.projectName=easy-notes
+#sonar.projectName=easy-notes
 sonar.projectVersion=1.0
 
 sonar.sources=src
