--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectName=easynotes
 sonar.projectKey=easynotes
-sonar.sources=.\\src\\main\\java 
-sonar.java.binaries=.\\target\\classes 
+sonar.sources=src/main/java
+sonar.java.binaries=target/classes 
